<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="be.nmct.unitycard.fragments.customer.RetailerInfoFragment">

    <data>
        <variable
            name="viewmodel"
            type="be.nmct.unitycard.models.viewmodels.fragment.RetailerInfoFragmentVM" />

        <import type="be.nmct.unitycard.models.Retailer" />

        <variable
            name="retailer"
            type="Retailer" />
    </data>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center_horizontal">

                <ImageView
                    android:id="@+id/imageViewLogoRetailer"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    app:imageUrl="@{retailer.logoUrl}"
                />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textViewRetailerInfoType"
                    android:text="@{String.valueOf(retailer.retailerCategoryId)}"
                    android:layout_marginRight="150dp"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textViewRetailerInfoPunten"
                    android:text="@{String.valueOf(retailer.id)}"
                    android:layout_marginRight="150dp" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/buttonToonAlleWinkels"
                    android:text="@string/toonAlleWinkels"
                    style="@style/ButtonTheme" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:id="@+id/textViewRetailerInfoDichtsbijzijndeWinkel"
                    android:text="@string/retailerDichtsbijzijndeWinkel"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="25dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="25dp"
                        android:id="@+id/textViewRetailerInfoDichtsbijzijndeWinkelValue"
                        android:text="@{retailer.name}" />
                    <!-- @string/retailerDichtsbijzijndeWinkelValue -->
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="200dp"
                        android:text="@string/OpenKaart"
                        android:id="@+id/buttonOpenKaart"/>

                </LinearLayout>

            </LinearLayout>

        </RelativeLayout>

    </android.support.v4.widget.NestedScrollView>

</layout>
